<resources>
    <string name="app_name">ConeqtViewer</string>
    <string name="single_input">Comment</string>
    <string name="your_string_here">I agree on <u>Terms and Conditions</u></string>
    <string name="payouts">Payouts</string>
    <string name="home">Home</string>
    <string name="overview">Overview</string>
    <string name="events">Events</string>
    <string name="settings">Settings</string>
    <string name="itemonetext">Hey lovelies! As you guys know I am in Bali for a month and it\'s amazing out here. Join me for a morning of mindfulness and after I will show you around the villa we are in. It is gorgeous!</string>
    <string name="withdraw_all_earning">Withdraw All earning</string>
    <string name="your_new_password_must_be_different_from_previously_used_password">Your new password must be different from previously used password</string>
    <string name="welcome_to_the_app_if_you_want_to_create_event_then_click_here">Welcome to the App if you want to Create Event then click here.</string>
    <string name="create_event">Create Event</string>
    <string name="payout">Payout</string>
    <string name="earning_stats">Earning stats</string>
    <string name="analytics_overview">Analytics Overview</string>
    <string name="balances">Balances</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="confirm">CONFIRM</string>
    <string name="lorem_ipsum_dolor_sit_amet_n_consectetur_adipiscing_elit_sed_do_n_eiusmod_temp_et_dolore">Lorem ipsum dolor sit amet,\n consectetur adipiscing elit,sed do\n eiusmod temp et dolore</string>
    <string name="are_you_sure_you_want_to_end_the_event">are you sure you want to end the event</string>
    <string name="create_stripe_account">Create Stripe account</string>
    <string name="share_the_url_on_social_platforms">Share the URl on social platforms</string>
    <string name="username_coneqt_live_eventname">username.coneqt.live/eventname</string>
    <string name="now_promote_via_a_url_generated">Now promote via a URL generated</string>
    <string name="event_created">Event Created</string>
    <string name="live">LIVE</string>
    <string name="bali_morning_mindfulness_and_villa_tour">Bali Morning Mindfulness and Villa Tour</string>
    <string name="hey_lovelies">Hey lovelies! As you guys know I am in Bali for a month and it\'s amazing out here. Join me for a morning of mindfulness and after I will show you around the villa we are in. It is gorgeous!</string>
    <string name="lucy_lure">@lucy_lure</string>
    <string name="tips">TIPS</string>
    <string name="create_new_event">Create new event</string>
    <string name="capture_image_here_or_browse">Capture image here, or <u>browse</u></string>
    <string name="available_jpg_jpeg_png_gif_max_size_3_mb">Available jpg, jpeg, png, gif. Max size 3 Mb</string>
    <string name="event_name">Event Name</string>
    <string name="event_time">Event Time</string>
    <string name="event_time_duration">Event Time Duration</string>
    <string name="type_of_event">Type of Event</string>
    <string name="description_about_event">Description about Event</string>
    <string name="stream_interaction">Stream interaction</string>
    <string name="event_morning_meditation_and_yoga_was_canceled">Event “Morning Meditation and Yoga” was canceled</string>
    <string name="event_history">Event History</string>
    <string name="bali_morning_mindfulness">Bali Morning Mindfulness</string>
    <string name="tickets_sold">tickets sold</string>
    <string name="per_ticket">per ticket</string>
    <string name="start_event">Start Event</string>
    <string name="cancel_event">Cancel Event</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_email_address_and_we_ll_send_you_a_code_to_reset_your_password">Enter your email address and we’ll send you a code to reset your password</string>
    <string name="send">SEND</string>
    <string name="sign_in_or_sign_up">Sign in or Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or_sign_in_with">or Sign in with</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="new_password">New Password</string>
    <string name="_65_in_the_past_hr">(<b>65</b> in the past hr)</string>
    <string name="_0_00"> <b>£</b> 0.00</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="past_event">Past Event</string>
    <string name="leslie_alexander">@Leslie_Alexander</string>
    <string name="jacob_jones">@Jacob_Jones</string>
    <string name="drop_image_here_or_browse">Drop image here, or <u>browse</u></string>
    <string name="kate_kate">@Kate Kate</string>
    <string name="event_has_been_canceled_by_event_creator_refund_amount_in_case_of_the_event_cancelation_is_2_540">Event has been canceled by event creator. Refund amount in case of the event cancelation is <b>£ 2.540</b></string>
</resources>