<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCffffff"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/border_style_round_gray"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitEnd"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:src="@drawable/ic_close_icon" />

        <TextView
            android:id="@+id/idGiftCardPopUpMessageAlertTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/event_created"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/idGiftCardAlertTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/share_the_url_on_social_platforms"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <LinearLayout
            android:id="@+id/idLinearSocialLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/idGmailLoginImageViewLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_twitter"
                android:viewportWidth="50"
                android:viewportHeight="50">

            </ImageView>

            <ImageView
                android:id="@+id/idPhoneLoginImageViewLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:src="@drawable/ic_linkedin"
                android:viewportWidth="50"
                android:viewportHeight="50">

            </ImageView>

            <ImageView
                android:id="@+id/idfbLoginImageViewLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:src="@drawable/ic_buttons_fb"
                android:viewportWidth="50"
                android:viewportHeight="50">

            </ImageView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:textStyle="normal"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="14sp"
                android:text="@string/now_promote_via_a_url_generated" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:textStyle="normal"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="14sp"
                android:text="@string/username_coneqt_live_eventname"
                android:textColor="@color/teal_700" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/idVerifyPhoneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/copy_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background_new_color"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_vertical|center"
                android:padding="@dimen/_15sdp"
                android:text="Copy the link"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:textStyle="normal" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>