<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:translationZ="90dp"
        android:visibility="gone"
        android:background="#60807A7A"
        android:id="@+id/idProgressBarRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_main"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:background="@drawable/ripple_circle_animation"
            app:lottie_rawRes="@raw/loader_black"
            android:layout_centerInParent="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="428dp"
        android:layout_height="150dp"
        android:background="@drawable/background_authentication"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/contLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="@dimen/_12sdp"
        android:src="@drawable/logo_app"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/sign_In"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center_vertical"
        android:text="@string/sign_in_or_sign_up"
        android:textColor="@color/black"
        android:textSize="27sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/sign_In"
        android:layout_marginTop="2dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/sign_In"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/idUsernamePasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/idSignUpFirstNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20sdp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/idEmailLoginFishIt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/background_curve"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/email"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:inputType="textEmailSubject"
                        android:textColor="@color/editTextColor"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/idSignUpLastNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/idPasswordLoginFishIt"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:background="@drawable/background_curve"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:textColor="@color/editTextColor"
                            android:textSize="16sp"
                            android:maxLength="15"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/showPasswordIcon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="10dp"
                            android:background="#00ffffff"
                            android:src="@drawable/ic_eyeicon_pass"
                            app:layout_constraintBottom_toBottomOf="@id/idPasswordLoginFishIt"
                            app:layout_constraintRight_toRightOf="@id/idPasswordLoginFishIt"
                            app:layout_constraintTop_toTopOf="@id/idPasswordLoginFishIt" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:id="@+id/idForgetPassTvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/_35sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/idVerifyPhoneBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idUsernamePasswordLayout"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/idLoginBtnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_background_new_color"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_vertical|center"
                    android:text="@string/sign_in"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/or_sign_in_with"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/idLinearSocialLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/idGoogleLogin"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:src="@drawable/ic_button_google"
                    android:viewportWidth="45"
                    android:viewportHeight="45">

                </ImageView>

                <ImageView
                    android:id="@+id/idFacebookLogin"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="60dp"
                    android:src="@drawable/ic_buttons_fb"
                    android:viewportWidth="45"
                    android:viewportHeight="45">

                </ImageView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/idTermsRelative"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idLoginTerms1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/appGrey"
                    android:textSize="16sp"
                    android:textStyle="normal">

                </TextView>

                <TextView
                    android:id="@+id/idLoginTerms2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/idLoginTerms1"
                    android:fontFamily="@font/montserrat_bold"
                    android:text=" Sign up"
                    android:textColor="@color/appGrey"
                    android:textSize="16sp"
                    android:textStyle="normal">

                </TextView>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.senarios.coneqtliveviewer.Views.TouchBlackHoleView
        android:id="@+id/blackHole"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

    </com.senarios.coneqtliveviewer.Views.TouchBlackHoleView>


</RelativeLayout>